test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/cluster-policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: clone-multiple-basic-create-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
