test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/fail-resources.yaml
apiVersion: v1
data:
  thisshouldnotbe: clonedanywhere
kind: ConfigMap
metadata:
  name: forbidden
  namespace: citrine
