test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opal
---
apiVersion: v1
data:
  gemstone: b3BhbA==
kind: Secret
metadata:
  name: opal-secret
  namespace: opal
  labels:
    allowedToBeCloned: "true"
type: Opaque
---
apiVersion: v1  
data:
  gemstone: opal
kind: ConfigMap
metadata:
  name: opal-cm
  namespace: opal
  labels:
    allowedToBeCloned: "true"
---
apiVersion: v1
data:
  thisshouldnotbe: clonedanywhere
kind: ConfigMap
metadata:
  name: forbidden
  namespace: opal
