test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: citrine
