test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/resource-assert.yaml
apiVersion: v1      
data:
  gemstone: b3BhbA==
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
  name: opal-secret
  namespace: citrine
type: Opaque
---
apiVersion: v1
data:
  gemstone: opal
kind: ConfigMap
metadata:
  labels:
    allowedToBeCloned: "true"
  name: opal-cm
  namespace: citrine
