test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/01-create.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create
spec:
  timeouts: {}
  try:
  - apply:
      file: manifests.yaml
  - apply:
      file: policy.yaml
  - assert:
      file: cluster-policy-ready.yaml
