test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/02-trigger.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: trigger
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - assert:
      file: resource-assert.yaml
  - error:
      file: fail-resources.yaml
