test/conformance/chainsaw/generate/clusterpolicy/standard/clone/multiple/sync/basic-create/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: basic-create
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: manifests.yaml
  - name: create policy
    use:
      template: ../../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: clone-multiple-basic-create-policy
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: resource-assert.yaml
    - error:
        file: fail-resources.yaml
